Tools/WebKitTestRunner/PlatformWebView.h
@@ -95,7 +95,7 @@ public:
     void removeFromWindow();
     void addToWindow();
 
-    bool viewSupportsOptions(const TestOptions&) const;
+    bool viewSupportsOptions(const TestOptions& options) const { return m_options.hasSameInitializationOptions(options); }
 
     PlatformImage windowSnapshotImage();
     const TestOptions& options() const { return m_options; }
