Tools/WebKitTestRunner/ios/PlatformWebViewIOS.mm
@@ -354,20 +354,6 @@ RetainPtr<CGImageRef> PlatformWebView::windowSnapshotImage()
     END_BLOCK_OBJC_EXCEPTIONS;
 }
 
-bool PlatformWebView::viewSupportsOptions(const TestOptions& options) const
-{
-    if (m_options.overrideLanguages != options.overrideLanguages
-        || m_options.needsSiteSpecificQuirks != options.needsSiteSpecificQuirks
-        || m_options.useCharacterSelectionGranularity != options.useCharacterSelectionGranularity
-        || m_options.enableIntersectionObserver != options.enableIntersectionObserver
-        || m_options.enableModernMediaControls != options.enableModernMediaControls
-        || m_options.enablePointerLock != options.enablePointerLock
-        || m_options.enableCredentialManagement != options.enableCredentialManagement)
-        return false;
-
-    return true;
-}
-
 void PlatformWebView::setNavigationGesturesEnabled(bool enabled)
 {
 }
